--- a/css/grid.css
+++ b/css/grid.css
@@ -7,7 +7,7 @@
     column-gap: 1rem;
     width: 1200px;
     margin: 0 auto;
-    max-width: 90%;
+    max-width: 80%;
 }
 
 .container.fluid {
@@ -61,6 +61,10 @@
 
 .container .col-10 {
     grid-column: span 10;
+}
+
+.container .col-11 {
+    grid-column: span 11;
 }
 
 .container .col-12 {
