--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,3 @@
-@import url("https://use.typekit.net/bbf3zdz.css");
-
 * {
     box-sizing: border-box;
 }
@@ -11,16 +9,36 @@ body {
 
 /* LINKS STYLING */
 
-nav a {
-    text-decoration: none;
+nav {
+    background-color: #3AB592;
+    padding: 1rem 0rem;
 }
 
-a {
-    color: #69e;
+nav a {
+    text-decoration: none;
+    font-size: 2rem;
+    font-weight: 600;
+}
+
+nav a:hover {
+    color: black;
+}
+
+a:visited { 
+    color: black; 
 }
 
 a:hover {
     color: #4D80D5;
+}
+
+.login {
+    float: right;
+    font-size: 1.2rem;
+    font-weight: normal;
+    position: relative;
+    top: 50%;
+    transform: translate(0, -50%);
 }
 
 .button {
