--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,48 @@ a:hover {
     transform: translate(0, -50%);
 }
 
+img {
+    max-width: 100%;
+    width: 100%;
+    min-width: 0;
+    display: block;
+}
+
+h1, h2 {
+    font-weight: normal;
+}
+
+h1 {
+    font-size: 1.75rem;
+    font-weight: 600;
+}
+
+h2 {
+    font-size: 1.25rem;
+    color: grey;
+}
+
+.banner h1 {
+    margin-top: 2.5rem;
+    margin-bottom: 0;
+}
+
+.banner h2 {
+    margin: 0.5rem 0;
+}
+
+h2 span {
+    color: black;
+}
+
+.banner {
+    margin-top: 10rem;
+}
+
+.search-bar {
+    background-color: grey;
+}
+
 .button {
     padding: 0.75rem 1rem;
     background: #69e;
@@ -131,13 +173,6 @@ p {
 
 h1.page-title {
     margin: 2.5rem;
-}
-
-img {
-    max-width: 100%;
-    width: 100%;
-    min-width: 0;
-    display: block;
 }
 
 /* MAIN NAV SECTION */
