--- a/css/style.css
+++ b/css/style.css
@@ -77,23 +77,33 @@ h2 span {
 
 .banner {
     margin-top: 10rem;
+    margin-bottom: 5rem;
 }
 
 .search-bar {
-    background-color: grey;
+    background-color: #F9FAF9;
+    padding: 2.5rem;
 }
 
-.button {
-    padding: 0.75rem 1rem;
-    background: #69e;
-    border: 2px solid #69e;
-    color: #fff;
-    text-decoration: none;
-    border-radius: 4px;
-    transition: all 0.3s ease;
-    text-align: center;
-    font-size: 1rem;
+.container .container {
+    margin: 0;
+    gap: 0;
+    max-width: 100%;
+    width: 100%;
 }
+
+input[type=button], input[type=submit] {
+    background-color: #F6F6F6;
+}
+
+input[type=button]:focus, input[type=submit]:focus {
+    background-color: #3AB592;
+}
+
+input[type=button]:focus, input[type=submit]:focus {
+    background-color: #3AB592;
+}
+
 
 .button.ghost {
     background: transparent;
@@ -146,19 +156,6 @@ input[type="text"], textarea, select {
 input:focus, textarea:focus, select:focus {
     outline: none;
     border: 2px solid #69e;
-}
-
-input[type="submit"] {
-    background: #69e;
-    color: #fff;
-    border-color: #69e;
-    cursor: pointer;
-}
-
-input[type="submit"]:hover, input[type="submit"]:focus {
-    box-shadow: 0 2px 10px 1px rgb(160,198,255);
-    background: #4D80D5;
-    border-color: #4D80D5;
 }
 
 label {
