--- a/css/style.css
+++ b/css/style.css
@@ -92,26 +92,14 @@ h2 span {
     width: 100%;
 }
 
-input[type=radio], input[type=submit] {
+input[type=button], input[type=submit] {
     background: #F6F6F6;
     display: inline-block;
 }
 
-input[type=radio]:focus, input[type=submit]:focus {
-    background: #3AB592;
-}
 
-.button.ghost {
-    background: transparent;
-    color: #69e;
-}
 
-label {
-    display: inline-block;
-    font-weight: 600;
-}
-
-.search-input {
+input[type=button]:focus, input[type=submit]:focus, input[type=button]:hover, input[type=submit]:hover {
     background: #3AB592;
 }
 
