--- a/css/style.css
+++ b/css/style.css
@@ -103,6 +103,10 @@ input[type=button]:focus, input[type=submit]:focus, input[type=button]:hover, in
     background: #3AB592;
 }
 
+
+
+/*old css code*/
+
 a.button:hover, a.button:focus {
     box-shadow: 0 2px 10px 1px rgb(160,198,255);
     background: #4D80D5;
