--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ a:visited {
 }
 
 a:hover {
-    color: #4D80D5;
+    color: black;
 }
 
 .login {
@@ -125,6 +125,10 @@ input[type=button]:focus, input[type=submit]:focus, input[type=button]:hover, in
 .login-page h2 {
   font-size: 0.85rem;
   color: grey;
+}
+
+.advanced {
+    margin-top: 1rem;
 }
 
 /* ///////// */
