--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,18 @@ input[type=button]:focus, input[type=submit]:focus, input[type=button]:hover, in
     margin-top: 1rem;
 }
 
+select {
+    width: 100%;
+}
+
+.gapped {
+    column-gap: 1rem !important;
+}
+
+.active {
+    background: #3AB592 !important;
+}
+
 /* Login-Page */
 .login-page {
   margin-top: 10rem;
@@ -215,7 +227,7 @@ a.button .icon {
     position: relative;
 }
 
-input, textarea, select {
+input, textarea {
     border-radius: 4px;
     box-shadow: none;
     border: 2px solid #ddd;
@@ -223,12 +235,12 @@ input, textarea, select {
     transition: all 0.3s ease;
     font-size: 1em;
     display: block;
-    font-family: aktiv-grotesk, BlinkMacSystemFont, -apple-system, system-ui, "Segoe UI", Roboto, "Helvetica Neue", sans-serif;
+    width: 100%;
 }
 
 input::placeholder, textarea::placeholder {
     font-weight: 100;
-    color: #ddd;
+    color: grey;
 }
 
 input[type="text"], textarea, select {
@@ -1515,13 +1527,6 @@ p.single-product-price {
     text-align: center;
 }
 
-@keyframes fadeOut {
-    0% {bottom: -10rem; opacity: 1;}
-    50% {bottom: 5rem;}
-    80% {opacity: 1;}
-    100% {opacity: 0;}
-}
-
 .return-to-top {
     position: fixed;
     font-size: 2rem;
@@ -1531,336 +1536,4 @@ p.single-product-price {
     padding: 1rem;
     background-color: #F5F9FF;
     animation: slide ease 2s;
-}
-
-@keyframes slide {
-    0% {bottom: -10rem;}
-    100% {bottom: 0rem;}
-}
-
-/* MEDIA QUERIES */
-
-@media  all and (max-width: 1320px) {
-    .reviews-summary ion-icon {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-    .summary-content {
-        text-align: center;
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-    }
-}
-
-@media  all and (max-width: 1110px) {
-    .side-filter-btn p {
-        grid-column: 1/3;
-        margin: auto;
-        text-align: center;
-    }
-
-    .side-filter-btn ion-icon {
-        grid-column: 1/3;
-        position: relative;
-        margin: auto;
-    }
-}
-
-@media  all and (max-width: 1050px) {
-    .review-element:not(.active){
-        display: none;
-    }
-    .review-element.active {
-        position: relative;
-        margin: 0 auto;
-        width: 100%;
-    }
-
-    .feature-1 {
-        display: block;
-    }
-
-    .feature-2 {
-        display: block;
-        margin-top: 3rem;
-    }
-
-    .feature-3 {
-        display: block;
-        margin-top: 3rem;
-    }
-
-    .feature-4-top {
-        display: block;
-        margin-top: 3rem;
-    }
-
-    .feature-4-bottom {
-        display: block;
-        margin-top: 0;
-    }
-
-    .feature-5 {
-        display: block;
-        margin-top: 3rem;
-    }
-
-    .half-img {
-        width: 100%;
-        float: none;
-    }
-
-    .feature-content-container {
-        display: block;
-        width: 100%;
-        float: none;
-    }
-
-    .feature-content {
-        top: 0;
-        left: 0;
-        transform: none;
-        margin-left: auto;
-        margin-right: auto;
-        position: static;
-        width: 80%;
-        padding-top: 4%;
-        padding-bottom: 6%;
-    }
-
-    .feature-content-container-background {
-        width: 100%;
-        position: static;
-    }
-
-    .feature-title {
-        max-width: 100%;
-    }
-
-    .overhang-img-container {
-        display: block;
-        width: 100%;
-        left: 0;
-    }
-
-    .feature-3 .feature-content-container {
-        width: 100%;
-        position: static;
-        position: static;
-    }
-
-    .overhang-img {
-        margin: 0;
-        width: 100%;
-        height: auto;
-    }
-
-    img.overhang-img {
-        display: none;
-    }
-
-    .feature-4-top .feature-content-container {
-        width: 100%;
-        position: static;
-        left: 0;
-        top: 0;
-    }
-
-    .small-img {
-        width: 100%;
-    }
-
-     .feature-4-bottom .feature-content-container {
-        width: 100%;
-        position: static;
-        left: 0;
-        top: 0;
-    }
-
-    .feature-6 .feature-content-container {
-        height: auto;
-    }
-
-    .feature-6 .feature-content {
-        display: block;
-    }
-}
-
-@media  all and (max-width: 950px) {
-    .image-gallery {
-        grid-column: 1/3;
-        margin-left: 10%;
-        margin-right: 10%;
-    }
-
-    .product-info-right {
-        grid-column: 1/3;
-    }
-    .bg-img {
-        min-height: 40vh;
-    }
-}
-
-@media  all and (max-width: 930px) {
-    nav.main-nav .desktop {
-        display: none;
-    }
-    nav.main-nav .mobile {
-        display: block;
-    }
-    .hero-text {
-        padding: 0 5% 10% 5%;
-    }
-    .advantage-text {
-        padding: 10% 5%;
-    }
-    .hero-text h1.hero-heading, .advantage-text h1.advantage-heading {
-        max-width: 90%;
-    }
-
-    #cart .checkout-summary {
-        margin: 5rem 0 0 0;
-    }
-
-    #cart .checkout-summary + .back {
-        margin: 2rem 0 0 0;
-    }
-
-    .cart-item-overview {
-        padding-bottom: 3rem;
-    }
-
-    .cart-item-expanded > .row > .col-6 {
-        margin: 1rem 0 0 0;
-    }
-
-    .cart-item-expanded .feature-box {
-        padding: 0 0 1rem 0;
-    }
-    .cart-item-description, .cart-item-actions {
-        padding: 0;
-    }
-
-    .brand img{
-        width: 50vw;
-        display: flex;
-        align-items: center;
-        margin: auto;
-    }
-
-    .product-grid-view-container {
-        column-gap: 1rem;
-        margin: auto;
-    }
-
-    .side-filter-btn p {
-        grid-column: 1;
-        margin: 0;
-        text-align: left;
-    }
-
-    .side-filter-btn ion-icon {
-        grid-column: 1;
-        position: absolute;
-        top: 50%;
-        transform: translate(0, -50%);
-        right: 0;
-    }
-
-    #hero {
-        background: #F5F9FF;
-        padding-bottom: 0;
-    }
-}
-
-@media  all and (max-width: 800px) {
-    .reviews-section-container .reviews-overview {
-        display: block;
-    }
-
-    .reviews-section-container .reviews-overview p.review-count {
-        margin: 0;
-        margin-top: 1rem;
-    }
-
-    .reviews-section-container .reviews-overview p.review-rating {
-        margin: 0;
-        margin-top: 1rem;
-    }
-
-    .reviews-section-container .reviews-overview ion-icon {
-        font-size: 2rem;
-    }
-
-    .reviews-section-container .sorting-container {
-        float: none;
-        margin-top: 1rem;
-    }
-
-    .reviews-summary {
-        grid-column: 1/5;
-    }
-
-    .summary-container {
-        width: 100%;
-        display: flex;
-        justify-content: space-between;
-        column-gap: 2rem;
-    }
-
-    .summary-row {
-        margin: 0;
-    }
-
-    .reviews-container {
-        grid-column: 1/5;
-        margin: 0;
-        margin-top: 2rem;
-    }
-
-    .image-gallery {
-        margin: 0;
-    }
-}
-
-@media  all and (max-width: 500px) {
-    .summary-container {
-        display: block;
-    }
-
-    .summary-row:first-of-type {
-        margin-bottom: 2rem;
-    }
-
-    .summary-row:last-of-type {
-        margin-top: 2rem;
-    }
-}
-
-@media all and (max-width: 450px) {
-    .spec-column-white span:first-of-type{
-        margin-left: 2rem;
-    }
-
-    .spec-column-white span:last-of-type{
-        margin-right: 2rem;
-    }
-
-    .spec-column-blue span:first-of-type{
-        margin-left: 2rem;
-    }
-
-    .spec-column-blue span:last-of-type{
-        margin-right: 2rem;
-    }
-}
-
-@media  all and (max-width: 300px) {
-    .reviews-date {
-        display: block;
-        float: none
-    }
 }
