--- a/css/style.css
+++ b/css/style.css
@@ -175,18 +175,12 @@ select {
     position: absolute;
     bottom: 2rem;
     right: 2rem;
+    background: #3AB592;
+    width: auto;
 }
 
 .business-cell h3:last-of-type {
     margin-bottom: 3rem;
-}
-
-.business-cell input {
-    background: #3AB592;
-}
-
-.business-cell input:hover {
-    cursor: pointer;
 }
 
 /* Login-Page */
@@ -292,4 +286,10 @@ input[type="text"], textarea, select {
 input:focus, textarea:focus, select:focus {
     outline: none;
     border: 2px solid #69e;
+}
+
+/* Register-Page */
+
+.business-details {
+    
 }
