--- a/css/style.css
+++ b/css/style.css
@@ -282,7 +282,7 @@ input:focus, textarea:focus, select:focus {
     border: 2px solid #69e;
 }
 
-/* Register-Page */
+/* Results Page */
 
 .business-details {
     
