pagination on results page

--- a/css/style.css
+++ b/css/style.css
@@ -305,6 +305,14 @@ select {
   padding: 2rem;
 }
 
+/* ///////// */
+
+/* Register-Page */
+
+.results input {
+    width: auto;
+}
+
 /* /////////// */
 
 input, textarea {
