--- a/css/style.css
+++ b/css/style.css
@@ -317,6 +317,12 @@ select {
 
 .results input {
     width:  auto;
+
+}
+
+.results a {
+    float: left;
+    margin-bottom: 2rem;
 }
 
 /* /////////// */
